2017-02-13  Aaron Sawdey  <acsawdey@linux.vnet.ibm.com>

PR target/79449
	* gcc.dg/strncmp-2.c: New.  Test strncmp and memcmp builtin expansion
	for reading beyond a 4k boundary.

2017-02-13  Aaron Sawdey  <acsawdey@linux.vnet.ibm.com>

	PR target/79449
	* config/rs6000/rs6000.c (expand_block_compare): Make sure runtime
	boundary crossing check and subsequent code generation agree.




git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@245392 138bc75d-0d04-0410-961f-82ee72b054a4